Nao temo o perigo

--- a/demoapp/MainPage.xaml
+++ b/demoapp/MainPage.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -6,23 +6,16 @@
     x:Class="demoapp.MainPage">
     <AbsoluteLayout>
         <ContentView
-            BackgroundColor="Black"
-            Opacity="1"
-            VerticalOptions="FillAndExpand"
-            HorizontalOptions="FillAndExpand"
-            AbsoluteLayout.LayoutFlags="All"
-            AbsoluteLayout.LayoutBounds="0,0,1,1" />
-        <Image
-            Source="https://loremflickr.com/640/800/stars"
-            Aspect="Fill"
-            AbsoluteLayout.LayoutFlags="All"
-            AbsoluteLayout.LayoutBounds="0,0,1,1" />
-        <ContentView
             x:Name="actIndBackground"
             AbsoluteLayout.LayoutBounds="0,0,1,1"
             AbsoluteLayout.LayoutFlags="All"
             BackgroundColor="#222222"
             Opacity="0.6" />
+        <Image
+            Source="https://loremflickr.com/640/800/stars"
+            Aspect="Fill"
+            AbsoluteLayout.LayoutFlags="All"
+            AbsoluteLayout.LayoutBounds="0,0,1,1" />
         <StackLayout
             Padding="30"
             Spacing="20"
@@ -55,7 +48,7 @@
                 FontAttributes="Bold"
                 Text="ENTRAR"
                 TextColor="White"
-                BorderRadius="25"
+                CornerRadius="25"
                 BorderColor="Green"
                 BackgroundColor="Green"
                 WidthRequest="220"
